--- a/3_RegularExpressions/RegularExpressions.ipynb
+++ b/3_RegularExpressions/RegularExpressions.ipynb
@@ -25,7 +25,9 @@
   {
    "cell_type": "markdown",
    "id": "5b1dd5e7-52e2-4be6-9b6e-9301ee9b3a0d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Match"
    ]
@@ -282,9 +284,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7f27798-651c-402c-ab4d-1cbddb014440",
+   "metadata": {},
+   "source": [
+    "# Fullmatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79c6978f-7e6e-4a4f-b6c3-62aa9f9ec2f7",
+   "metadata": {},
+   "source": [
+    "определяет соответствие строки переданному шаблону. если вся строка соответствует ему - возвращает объект Match"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e27a8ab-3de8-45cf-b6f7-73382356cb4a",
+   "id": "14c04875-ecae-4fd4-8127-7f146ebaff6e",
    "metadata": {},
    "outputs": [],
    "source": []
