--- a/4_Бизнес_анализ/Динамика_продаж/Динамика продаж.ipynb
+++ b/4_Бизнес_анализ/Динамика_продаж/Динамика продаж.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "55f383be-dcfc-439b-bcdb-9c31eed819ac",
+   "id": "31dad338-1664-4662-b9ce-a8d653a41942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a68466e3-8cb5-402b-80d1-47e8a3d85e22",
+   "id": "8db2ffed-682f-46ab-b56c-70f5c4c6f59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c56a4e01-e74c-42ff-b81c-a38ded1a47cf",
+   "id": "a63fe1ea-81d6-4583-a7f2-5fc5fabd9850",
    "metadata": {},
    "outputs": [
     {
@@ -244,65 +244,22 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data_drugs.csv\", encoding='1251')\n",
+    "df = pd.read_csv(\"../data_drugs.csv\", encoding='1251')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "34fc2969-4400-4f7e-a67d-dd48e82815d5",
-   "metadata": {},
-   "source": [
-    "# ABC - анализ\n",
-    "\n",
-    "- показывает какой товар приносит максимум денег\n",
-    "- основан на правиле Парето"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "176d391f-2d91-4a6f-b246-32f8baaf35c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d236007-220b-41f1-8a12-e9fc3ef7bb86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "354c3d92-40c3-40e4-92fb-789b3dda16a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "02b1f0b7-3686-49fe-ac43-3245e9e53390",
+   "id": "889b6ae9-f7a4-4703-8251-37d069787a69",
    "metadata": {},
    "source": [
     "# Динамика продаж"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2fd6cf02-71df-4223-9841-519af1698357",
-   "metadata": {},
-   "source": [
-    "# XYZ - анализ"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0b98954-1f01-4659-98be-2aac74e45db5",
+   "id": "4af906fc-a7e2-490e-b285-de4edba643cd",
    "metadata": {},
    "outputs": [],
    "source": []
