--- a/4_Бизнес_анализ/ABC_анализ/ABC.ipynb
+++ b/4_Бизнес_анализ/ABC_анализ/ABC.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "a68466e3-8cb5-402b-80d1-47e8a3d85e22",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
+   "id": "ec6523f7-e671-45c9-b255-03fea689669f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perform_abs(df: pd.DataFrame, index: str) -> pd.DataFrame:\n",
+    "    cols = list(df.columns)\n",
+    "    cols.remove(index)\n",
+    "    grouped_df = df.groupby(index).agg({col: sum for col in cols})\n",
+    "    for col in cols:\n",
+    "        grouped_df[f'rel_{col}'] = grouped_df[col] / sum(grouped_df[col])\n",
+    "        grouped_df = grouped_df.sort_values(f'rel_{col}', ascending=False)\n",
+    "        grouped_df[f'cumsum_{col}'] = grouped_df[f'rel_{col}'].cumsum()\n",
+    "        grouped_df[f'abc_{col}'] = np.where(grouped_df[f'cumsum_{col}'] < 0.8, \"A\", np.where(grouped_df[f'cumsum_{col}'] < 0.95, 'B', 'C'))\n",
+    "    return grouped_df[cols + [f'abc_{col}' for col in cols]]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "c56a4e01-e74c-42ff-b81c-a38ded1a47cf",
    "metadata": {},
    "outputs": [
@@ -238,7 +258,7 @@
        "4     49.00    925.00 200000000492.00         205        1    1.00  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,6 +266,170 @@
    "source": [
     "df = pd.read_csv(\"../data_drugs.csv\", encoding='1251')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d20caa02-ed0b-44b9-9975-3bbc5983d4d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DR_Kol</th>\n",
+       "      <th>DR_CRoz</th>\n",
+       "      <th>abc_DR_Kol</th>\n",
+       "      <th>abc_DR_CRoz</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DR_NDrugs</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ТЕРАФЛЮ ЛИМОН ОТ ГРИППА И ПРОСТУДЫ 22,1Г. №14 ПОР. Д/Р-РА Д/ПРИЕМА ВНУТРЬ ПАК.</th>\n",
+       "      <td>7.00</td>\n",
+       "      <td>15638.00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>НИМЕСИЛ 100МГ. 2Г. №30 ГРАН. Д/СУСП. Д/ПРИЕМА ВНУТРЬ ПАК. /ГУИДОТТИ/МЕНАРИНИ/</th>\n",
+       "      <td>2.80</td>\n",
+       "      <td>14445.00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ИНГАВИРИН 90МГ. №10 КАПС. /ВАЛЕНТА/</th>\n",
+       "      <td>18.00</td>\n",
+       "      <td>13750.00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ХАРТМАНН БРАНОЛИНД H ПОВЯЗКА СТЕР. 10Х20СМ. №30 ПЕРУАН.БАЛЬЗАМ /АРТ.4923462/ [BRANOLIND]</th>\n",
+       "      <td>0.17</td>\n",
+       "      <td>12908.00</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ЭЛИКВИС 2,5МГ. №60 ТАБ. П/П/О /ПФАЙЗЕР/БРИСТОЛ-МАЙЕРС/</th>\n",
+       "      <td>5.00</td>\n",
+       "      <td>12731.00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>КОНТЕЙНЕР Д/СБОРА БИОМАТЕРИАЛА 60МЛ. +ШПАТЕЛЬ СТЕР. И/У (БАНКА)</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>АСКОРБИНОВАЯ К-ТА 25МГ. АПЕЛЬСИН №10 ТАБ. КРУТКА САХ. /АСКОПРОМ/</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>B</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>АСКОРБИНОВАЯ К-ТА 25МГ. №10 ТАБ. КРУТКА САХ. /АСКОПРОМ/</th>\n",
+       "      <td>7.00</td>\n",
+       "      <td>9.00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>КЛИНСА БАХИЛЫ СТАНДАРТ №2 (1ПАРА)</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Карта LOYALITY 0,01Р</th>\n",
+       "      <td>34.00</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1876 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    DR_Kol  DR_CRoz  \\\n",
+       "DR_NDrugs                                                             \n",
+       "ТЕРАФЛЮ ЛИМОН ОТ ГРИППА И ПРОСТУДЫ 22,1Г. №14 П...    7.00 15638.00   \n",
+       "НИМЕСИЛ 100МГ. 2Г. №30 ГРАН. Д/СУСП. Д/ПРИЕМА В...    2.80 14445.00   \n",
+       "ИНГАВИРИН 90МГ. №10 КАПС. /ВАЛЕНТА/                  18.00 13750.00   \n",
+       "ХАРТМАНН БРАНОЛИНД H ПОВЯЗКА СТЕР. 10Х20СМ. №30...    0.17 12908.00   \n",
+       "ЭЛИКВИС 2,5МГ. №60 ТАБ. П/П/О /ПФАЙЗЕР/БРИСТОЛ-...    5.00 12731.00   \n",
+       "...                                                    ...      ...   \n",
+       "КОНТЕЙНЕР Д/СБОРА БИОМАТЕРИАЛА 60МЛ. +ШПАТЕЛЬ С...    1.00    10.00   \n",
+       "АСКОРБИНОВАЯ К-ТА 25МГ. АПЕЛЬСИН №10 ТАБ. КРУТК...    1.00    10.00   \n",
+       "АСКОРБИНОВАЯ К-ТА 25МГ. №10 ТАБ. КРУТКА САХ. /А...    7.00     9.00   \n",
+       "КЛИНСА БАХИЛЫ СТАНДАРТ №2 (1ПАРА)                     2.00     7.00   \n",
+       "Карта LOYALITY 0,01Р                                 34.00     0.34   \n",
+       "\n",
+       "                                                   abc_DR_Kol abc_DR_CRoz  \n",
+       "DR_NDrugs                                                                  \n",
+       "ТЕРАФЛЮ ЛИМОН ОТ ГРИППА И ПРОСТУДЫ 22,1Г. №14 П...          A           A  \n",
+       "НИМЕСИЛ 100МГ. 2Г. №30 ГРАН. Д/СУСП. Д/ПРИЕМА В...          A           A  \n",
+       "ИНГАВИРИН 90МГ. №10 КАПС. /ВАЛЕНТА/                         A           A  \n",
+       "ХАРТМАНН БРАНОЛИНД H ПОВЯЗКА СТЕР. 10Х20СМ. №30...          C           A  \n",
+       "ЭЛИКВИС 2,5МГ. №60 ТАБ. П/П/О /ПФАЙЗЕР/БРИСТОЛ-...          A           A  \n",
+       "...                                                       ...         ...  \n",
+       "КОНТЕЙНЕР Д/СБОРА БИОМАТЕРИАЛА 60МЛ. +ШПАТЕЛЬ С...          C           C  \n",
+       "АСКОРБИНОВАЯ К-ТА 25МГ. АПЕЛЬСИН №10 ТАБ. КРУТК...          B           C  \n",
+       "АСКОРБИНОВАЯ К-ТА 25МГ. №10 ТАБ. КРУТКА САХ. /А...          A           C  \n",
+       "КЛИНСА БАХИЛЫ СТАНДАРТ №2 (1ПАРА)                           A           C  \n",
+       "Карта LOYALITY 0,01Р                                        A           C  \n",
+       "\n",
+       "[1876 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perform_abs(df[['DR_Kol', 'DR_CRoz', 'DR_NDrugs']].copy(), index='DR_NDrugs')"
    ]
   },
   {
@@ -1135,6 +1319,14 @@
     "grouped_df['abc_roz'] = np.where(grouped_df['cumsum_roz'] < 0.8, 'A', np.where(grouped_df['cumsum_roz'] < 0.95, 'B', 'C'))\n",
     "grouped_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4424284f-8b38-418c-868d-607c80a16cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
