--- a/3_RegularExpressions/RegularExpressions.ipynb
+++ b/3_RegularExpressions/RegularExpressions.ipynb
@@ -300,6 +300,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcc8a267-0f40-43e9-bee3-492ad0d2e62f",
+   "metadata": {},
+   "source": [
+    "### Finditer\n",
+    "\n",
+    "возвращает итератор Match объектов"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e088665-2c2b-4081-a222-96065799ecac",
+   "metadata": {},
+   "source": [
+    "### Findall\n",
+    "\n",
+    "возвращает список всех найденных совпадений"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb5ca162-dc93-4647-ac0b-97ed27a22c96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e9b4bb9-5628-4faa-875f-d8df9fc2bf01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "14c04875-ecae-4fd4-8127-7f146ebaff6e",
