--- a/3_RegularExpressions/RegularExpressions.ipynb
+++ b/3_RegularExpressions/RegularExpressions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "7358abbd-c6f6-4634-b1e9-ee4521bebc30",
    "metadata": {},
    "outputs": [],
@@ -24,10 +24,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bbd7d4a-81f3-482d-aa77-af692fb3f40d",
+   "metadata": {},
+   "source": [
+    "# Операторы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ca19269-ed5d-485d-b946-9621e474f406",
+   "metadata": {},
+   "source": [
+    "- \\w - любой символ слова (буквенные, цифровые, _)\n",
+    "- \\W - любой символ не слова\n",
+    "- . -- любой символ кроме переноса строки\n",
+    "- \\d - любой цифровой символ\n",
+    "- \\D - любой не цифровой символ\n",
+    "- + -- от 1 до бесконечности\n",
+    "  * -- от 0 до бесконечности \n",
+    "- \\s - пробельный символ: \\t\\n\\r\\f\\v\n",
+    "- \\S - любой не пробельный символ\n",
+    "\n",
+    "- () - группирующие, сохраняющие скобки\n",
+    "- [] - символьный класс\n",
+    "- ^ - инвертирование симовльного класса\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5b1dd5e7-52e2-4be6-9b6e-9301ee9b3a0d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Match"
    ]
@@ -37,7 +63,7 @@
    "id": "88176810-5e09-4952-b86d-8e66d863c908",
    "metadata": {},
    "source": [
-    "ищет совпадение обязательно с самого начала строки"
+    "ищет совпадениев начале строки"
    ]
   },
   {
@@ -304,7 +330,7 @@
    "id": "bcc8a267-0f40-43e9-bee3-492ad0d2e62f",
    "metadata": {},
    "source": [
-    "### Finditer\n",
+    "# Finditer\n",
     "\n",
     "возвращает итератор Match объектов"
    ]
@@ -314,9 +340,19 @@
    "id": "8e088665-2c2b-4081-a222-96065799ecac",
    "metadata": {},
    "source": [
-    "### Findall\n",
+    "# Findall\n",
     "\n",
     "возвращает список всех найденных совпадений"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5230acdb-d91f-4a5b-87c6-1fd69a487fdf",
+   "metadata": {},
+   "source": [
+    "# Sub\n",
+    "\n",
+    "для замены"
    ]
   },
   {
