--- a/3_RegularExpressions/RegularExpressions.ipynb
+++ b/3_RegularExpressions/RegularExpressions.ipynb
@@ -40,14 +40,30 @@
     "- . -- любой символ кроме переноса строки\n",
     "- \\d - любой цифровой символ\n",
     "- \\D - любой не цифровой символ\n",
-    "- + -- от 1 до бесконечности\n",
-    "  * -- от 0 до бесконечности \n",
+    "- \"+\" - от 1 до бесконечности\n",
+    "- \"*\" - от 0 до бесконечности\n",
+    "- \"?\" - от 0 до 1 \n",
     "- \\s - пробельный символ: \\t\\n\\r\\f\\v\n",
     "- \\S - любой не пробельный символ\n",
     "\n",
+    "- \\A - начало текста\n",
+    "- \\Z - конец текста\n",
+    "\n",
+    "- \\b - границы слова. внутри символьных классов соответствует символу backspace\n",
+    "- \\B - граница не слова\n",
+    "\n",
+    "- (?=exp) | (?!exp) - опережающая проверка lookbehind\n",
+    "- (?<=exp) | (?<!exp) - ретроспективная проверка\n",
+    "\n",
+    "- {} - квантификаторы, мажорный режим\n",
+    "- {}? - минорный режим\n",
     "- () - группирующие, сохраняющие скобки\n",
+    "- (?:) - группирующие, несохраняющие скобки\n",
     "- [] - символьный класс\n",
-    "- ^ - инвертирование симовльного класса\n"
+    "- ^ - инвертирование симовльного класса | начало текста (с флагом re.MULTILINE - начало строки)\n",
+    "- $ - конец текста (с флагом re.MULTILINE - позиция перед символом переноса строки)\n",
+    "\n",
+    "- [\\w\\W] - для включения всего, в т.ч. переноса строки\n"
    ]
   },
   {
@@ -214,28 +230,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "id": "e5d5043a-718c-46cc-ade9-fc94363de0cb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " example@sdfsdf\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "example\n"
+     "ename": "NameError",
+     "evalue": "name 're' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mre\u001b[49m\u001b[38;5;241m.\u001b[39mmatch(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+)@\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28minput\u001b[39m())[\u001b[38;5;241m1\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 're' is not defined"
      ]
     }
    ],
    "source": [
     "print(re.match(r'(\\w+)@', input())[1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61651309-b7e8-446d-a0e7-e5d044065fd3",
+   "metadata": {},
+   "source": [
+    "# Атрибуты и методы объекта Match\n",
+    "- expand() - работает аналогично методу re.sub()\n",
+    "- group([group1, ...) - возвращает найденное совпадение по номеру или имени группы. если не передать аргументов, то выведе нулевую группу, т.е. всё, что захватила регулярка\n",
+    "  match.group(1), match[1]\n",
+    "  match.group(\"name\"), match[\"name\"], match.group(0, \"name\", 1)\n",
+    " \n",
+    "- groups(default=None) - возвращает кортеж со всеми группами, кроме нулевой\n",
+    "- groupdict(default=None) - возвращает словарь, ключи которого - имена групп, а значения - совпадения этих групп. Если именнованных групп в выражении не использовалось, вернётся пустой словарь\n",
+    "  \n",
+    "- start()\n",
+    "- end()\n",
+    "  возвращают индексы начала и конца совпадения с регулярным выражением группы, номер или имя которой были переданы в метод\n",
+    "  match.start(1), match.end(\"name\")  \n",
+    "\n",
+    "  \n",
+    "- span() - возвращает кортеж с индексами начала и конца совпадения группы, номер или имя которой были переданы в метод.\n",
+    "  \n",
+    "- lastindex - номер последней найденной группы\n",
+    "- lastgroup - имя последней найденной именованной группы\n",
+    "- pos - начальная позиция, с которой функция ищет совпадения\n",
+    "- endpos - конечная позиция, до которой функция ищет совпадения\n",
+    "- re - получить регулярное выражение, по которому осуществлялся поиск\n",
+    "- string - получить строку, по которой осуществлялся поиск"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65dced66-a189-4220-be62-fa1aa074e623",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -356,27 +407,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb5ca162-dc93-4647-ac0b-97ed27a22c96",
+   "cell_type": "markdown",
+   "id": "33e42c54-0ce5-4596-bf24-e53d31031739",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Split\n",
+    "\n",
+    "разбивает строки по заданному паттерну\n",
+    "\n",
+    "- pattern\n",
+    "- string\n",
+    "- maxsplit - максмимальное количество делений строки\n",
+    "- flags"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e9b4bb9-5628-4faa-875f-d8df9fc2bf01",
+   "cell_type": "markdown",
+   "id": "ad000f6d-ef9d-4e69-b77d-a513abda233d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Sub\n",
+    "\n",
+    "re.sub(pattern, replace, string, count=0, flags=0)\n",
+    "\n",
+    "pattern - регулярное выражение\r\n",
+    "replace - то, на что нужно заменить найденное вхождение\r\n",
+    "string - строка, к которой нужно применить регулярное выражение\r\n",
+    "count - необязательный аргумент, максимальное число вхождений, подлежащих замене. Если этот параметр опущен или равен нулю, то произойдет замена всех вхождений.\r\n",
+    "flags - фозже"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14c04875-ecae-4fd4-8127-7f146ebaff6e",
+   "cell_type": "markdown",
+   "id": "65d8bed1-dd42-4d85-805a-4cad326987df",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Escape\n",
+    "\n",
+    "re.escape(pattern) - экранирует специальные символы в pattern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86c683c6-22a1-49fa-ba4f-ad3bf3ee497a",
+   "metadata": {},
    "source": []
   }
  ],
