--- a/8_Docker/Docker.ipynb
+++ b/8_Docker/Docker.ipynb
@@ -63,8 +63,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f905eb90-5f8d-4ba8-911d-f66ae3c9add8",
+   "cell_type": "raw",
+   "id": "be8621fe-c3ee-48db-b119-016ac30fc00a",
    "metadata": {},
    "source": [
     "sudo apt remove docker-desktop\n",
@@ -82,8 +82,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "95c68c5a-0f6b-46c5-8b4f-389fa64134f1",
+   "cell_type": "raw",
+   "id": "e56ceae8-c095-4ed3-816a-c61f474c4486",
    "metadata": {},
    "source": [
     "# Add Docker's official GPG key:\r\n",
@@ -91,7 +91,7 @@
     "sudo apt-get install ca-certificates curl gnupg\r\n",
     "sudo install -m 0755 -d /etc/apt/keyrings\r\n",
     "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\r\n",
-    "sudo chmod a+r /etc/apt/keyrings/docker\n",
+    "sudo chmod a+r /etc/apt/keyrings/d.gpgor\n",
     "# g\r\n",
     "\r\n",
     "# Add the repository to Apt sources:\r\n",
@@ -137,8 +137,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a0da36aa-0f39-4086-8bdb-5bfc64437d08",
+   "cell_type": "raw",
+   "id": "d6c5b48a-1db2-4570-b3cf-f54850669993",
    "metadata": {},
    "source": [
     "modprobe kvm\n",
