--- a/8_Docker/Docker.ipynb
+++ b/8_Docker/Docker.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "b2c57dc5-5f12-4be6-8f40-1d0d65bcd0ae",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# RESOURCES"
    ]
@@ -16,6 +22,29 @@
     "- https://habr.com/ru/company/ruvds/blog/439980/\n",
     "- https://habr.com/ru/company/southbridge/blog/329138/\n",
     "- https://docs.gitlab.com/ee/ci/docker/using_kaniko.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a164538d-2a25-4d02-8e24-c22f6c013f94",
+   "metadata": {},
+   "source": [
+    "- онлайн песочницы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2342b38b-1c32-4c71-9874-dad25b311f84",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "- https://labs.play-with-docker.com\n",
+    "- https://rotoro.cloud/dashboard/"
    ]
   },
   {
@@ -51,7 +80,31 @@
     "# запуск контейнера\n",
     "- docker run -d -p 8080:8080 [name]:[tag] \n",
     "-p порт_наружу:порт_внутри_докера \n",
-    "-d запускает контейнер в фоновом режиме и выводит в консоль его ID\n"
+    "-d запускает контейнер в фоновом режиме и выводит в консоль его ID\n",
+    "-it - запуск в интерактивном режиме\n",
+    "\n",
+    "# присооединить запущенный контейнер к консоли \n",
+    "docker attach [id | name]\n",
+    "\n",
+    "# посмотреть информацию обо всех контейнерах \n",
+    "docker ps -a\n",
+    "\n",
+    "# остановить работу контейнера\n",
+    "docker stop [id | name]\n",
+    "docker stop $(docker ps -q) - остановка всех контейнеров\n",
+    "\n",
+    "# удалить остановленный контейнер\n",
+    "docker rm [id | name] [id | name] [id | name] ....\n",
+    "docker rm $(docker ps -aq) - удалить все контейнеры\n",
+    "\n",
+    "# удалить образ из системы \n",
+    "docker rmi [-f] [id | name]\n",
+    "\n",
+    "# скачать образ на машину\n",
+    "docker pull [name]\n",
+    "\n",
+    "# выполнить команду в запущенном контейнере\n",
+    "docker exec [name | id] команда"
    ]
   },
   {
@@ -91,7 +144,7 @@
     "sudo apt-get install ca-certificates curl gnupg\r\n",
     "sudo install -m 0755 -d /etc/apt/keyrings\r\n",
     "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\r\n",
-    "sudo chmod a+r /etc/apt/keyrings/d.gpgor\n",
+    "sudo chmod a+r /etc/apt/keyrings/r\n",
     "# g\r\n",
     "\r\n",
     "# Add the repository to Apt sources:\r\n",
@@ -134,6 +187,14 @@
    "metadata": {},
    "source": [
     "systemctl --user start docker-desktop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f7bcbe6-5529-41e0-8a0e-610af0b71d5d",
+   "metadata": {},
+   "source": [
+    "sudo usermod -aG docker behappyman"
    ]
   },
   {
