--- a/9_Kubernetes/Kubernetes.ipynb
+++ b/9_Kubernetes/Kubernetes.ipynb
@@ -3,18 +3,31 @@
   {
    "cell_type": "markdown",
    "id": "8c9be19d-cd49-4f9c-ac74-3dc9a0221160",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Ресурсы"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7be1be4-e337-4bbb-88b1-fa442cf44fd7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "64a53e7d-a077-4402-9301-ea56793f67db",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "онлайн-песочницы\n",
+    "- https://labs.play-with-k8s.com/"
+   ]
   },
   {
    "cell_type": "code",
