--- a/2_Pandas/pandas_structured.ipynb
+++ b/2_Pandas/pandas_structured.ipynb
@@ -13,11 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "fdd53e20-3acc-4e3d-a762-ee7c7bd11fc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[pandas.core.frame.DataFrame,\n",
+       " pandas.core.generic.NDFrame,\n",
+       " pandas.core.base.PandasObject,\n",
+       " pandas.core.accessor.DirNamesMixin,\n",
+       " pandas.core.indexing.IndexingMixin,\n",
+       " pandas.core.arraylike.OpsMixin,\n",
+       " object]"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame.mro()"
+   ]
   },
   {
    "cell_type": "code",
