--- a/8_Docker/Docker.ipynb
+++ b/8_Docker/Docker.ipynb
@@ -55,7 +55,7 @@
     "- install-uninstall docker\n",
     "\n",
     "https://docs.docker.com/desktop/install/linux-install/\n",
-    "\n"
+    "https://linuxhint.com/install_docker_linux_mint/\n"
    ]
   },
   {
@@ -104,7 +104,33 @@
     "docker pull [name]\n",
     "\n",
     "# выполнить команду в запущенном контейнере\n",
-    "docker exec [name | id] команда"
+    "docker exec [name | id] команда\n",
+    "\n",
+    "# получить детальную информацию о контейнере\n",
+    "docker inspect [id] \n",
+    "\n",
+    "# смотреть logs \n",
+    "docker logs [id]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d8df66-23a1-4462-9a29-95cf7b0de767",
+   "metadata": {},
+   "source": [
+    "## Docker Run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fda50af3-6ee0-4146-82a4-f26e5ad8ea1c",
+   "metadata": {},
+   "source": [
+    "- запустить определенную версию образа name:tag (default: latest)\n",
+    "- -it - подключение к контейнеру в интерактивном режиме\n",
+    "- -p host_port:docker_port\n",
+    "- -v /opt/datadir:/var/lib/mysql - проброс папки - таким образом docker монтирует внешюю директорию в свою внутреннюю\n",
+    "- "
    ]
   },
   {
@@ -139,19 +165,19 @@
    "id": "e56ceae8-c095-4ed3-816a-c61f474c4486",
    "metadata": {},
    "source": [
-    "# Add Docker's official GPG key:\r\n",
-    "sudo apt-get update\r\n",
-    "sudo apt-get install ca-certificates curl gnupg\r\n",
-    "sudo install -m 0755 -d /etc/apt/keyrings\r\n",
-    "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\r\n",
-    "sudo chmod a+r /etc/apt/keyrings/r\n",
-    "# g\r\n",
-    "\r\n",
-    "# Add the repository to Apt sources:\r\n",
-    "echo \\\r\n",
-    "  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \\\r\n",
-    "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" | \\\r\n",
-    "  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null\r\n",
+    "# Add Docker's official GPG key:\n",
+    "sudo apt-get update\n",
+    "sudo apt-get install ca-certificates curl gnupg\n",
+    "sudo install -m 0755 -d /etc/apt/keyrings\n",
+    "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\n",
+    "sudo chmod a+r /etc/apt/keyrings/docker.gpg\n",
+    "\n",
+    "\n",
+    "# Add the repository to Apt sources:\n",
+    "echo \\\n",
+    "  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \\\n",
+    "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" | \\\n",
+    "  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
     "sudo apt-get update"
    ]
   },
