--- a/4_Бизнес_анализ/Метрики.ipynb
+++ b/4_Бизнес_анализ/Метрики.ipynb
@@ -154,6 +154,22 @@
    "source": [
     "опрос с предложением выбрать вероятность рекомендации другим людям"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b7d88c7-d28a-4531-9c35-b2136ee7df76",
+   "metadata": {},
+   "source": [
+    "## ARPU (Average Revenue Per User)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6057109d-f170-474f-8db2-ed573f8278ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
